--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3"
   },
+  "proxy": "http://localhost:5000",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -23,6 +25,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "express": "^4.16.4",
     "node": "^8.9.0",
     "node-sass": "^4.11.0"
   }
