--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "node": "^8.9.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3"
@@ -10,6 +11,7 @@
   "proxy": "http://localhost:5000",
   "scripts": {
     "start": "node index.js",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -25,7 +27,6 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "node": "^8.9.0",
     "node-sass": "^4.11.0"
   }
 }
